--- a/WebContent/test/uraColumnDemo.css
+++ b/WebContent/test/uraColumnDemo.css
@@ -17,6 +17,20 @@ body {
 	margin-top: 0;
 }
 
+h2 {
+	margin-top: 2px;
+	padding: 0;
+	border-bottom-width: 1px;
+	border-bottom-style: dotted;
+}
+
+h3, h4, h5 {
+	margin: 0;
+	padding: 0;
+	borber-width: 0;
+	border-style: none;
+}
+
 div, p {
 	margin: 3px;
 	padding: 0;
@@ -31,18 +45,13 @@ div.sample {
 	padding: 5px;
 }
 
-h2 {
-	margin-top: 2px;
-	border-bottom-width: 1px;
-	border-bottom-style: dotted;
-}
 
 button,
 input.normalBtn {
-	padding-left: 13px;
-	padding-right: 13px;
-	padding-top: 4px;
-	padding-bottom: 4px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	border-width: 1px;
 	border-style: solid;
 	border-radius: 5px;
@@ -80,7 +89,17 @@ body {
 h1 {
 	font-size: 200%;
 }
-code {
+
+h2 {
+	font-size: 150%;
+}
+
+h3 {
+	font-size: 110%;
+	text-decoration: underline;
+}
+code,
+pre.src {
 	font-family: Consolas, "Helvetica Neue", Helvetica, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "Meiryo UI", "メイリオ", Meiryo, Osaka, sans-serif;
 }
 
@@ -113,7 +132,8 @@ body {
 	color: #306;
 }
 
-code {
+code,
+pre.src {
 	color: #fff;
 	background-color: #006;
 	border-right-color: #666;
